<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Az-De Lüğət</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="yaddashda_olanlar">Yaddaşda olanlar</string>
    <string name="shebeke">Şəbəkə</string>
    <string name="paylash">Paylaş</string>
    <string name="komek">Kömək</string>
    <string name="elaqe">Bizimlə əlaqə</string>

    <string name="izah">Tətbiq və lügət haqda təklif və iradınızı mesaj bölməsində qeyd edə bilərsiz. Əgər cavablanmasını istəyirsinizsə emailinizi mesaj bölməsində zəhmət olmasa əlavə edin  </string>


    <string name="ad">Ad</string>
    <string name="qeyd">Mesaj</string>
    <string name="gonder">Göndər</string>
    <string name="bagla">Bağla</string>
    <string name="adınıyaz">Adınızı yazın</string>
    <string name="mesajyaz">Mesajınızı burada qeyd edin</string>



    <string name="diger">Digər</string>
    <string name="haqqinda">Haqqında</string>
    <string name="proq_dili">Proqram dili</string>
    <string name="azerbaycan">Azərbaycan</string>
    <string name="alman">Alman</string>
    <string name="axtar">Axtar</string>

    <string name="sil">Sil</string>
    <string name="info">Proqram haqda məlumat</string>
    <string name="name">Elvin Məmmədov</string>
    <string name="rate">Tətbiqi qiymətləndir</string>

    <string name="kitab_haqda">Lüğət Çərkəz Qurbanlının redaktorluğu ilə çıxarılmış Almanca-Azərbaycanca
Lüğət kitabı əsasında hazırlanmışdır</string>

    <string name="tsk">Tətbiqin hazırlanmasında Ömər Faiq Orucluya öz təşəkkürümü bildirirəm</string>

    <string name="speech_prompt">Salam. Nəsə deyin</string>
    <string name="speech_not_supported">Bağışlayın amma sizin dediyiniz söz qeydə alınmadı</string>


    <!-- TODO: Remove or change this placeholder text -->



</resources>
